syntax = "proto3";

package micro.mailservice;

option java_package = "zdmk.micro.mailservice.protos";
option java_outer_classname = "MailService";
option java_multiple_files = true;
option java_generic_services = true;

service MailSender {
  rpc SendMail(MailData) returns (SendEventInfo);
}

message SendEventInfo {
  int32 status = 1;
  string message = 2;
}

message MailData {
  ConnectionInfo connectionInfo = 1;
  repeated string receiver = 2;
  string content = 3;
  optional string subject = 4;
}

message ConnectionInfo {
  string protocol = 1;
  optional string address = 2;
  optional int32 port = 3;
  string login = 4;
  string password = 5;
}