syntax = "proto3";

package micro.notificationservice;

option java_package = "zdmk.micro.notificationservice.protos";
//option java_outer_classname = "NotificationService";
option java_multiple_files = true;
option java_generic_services = true;

service NotificationService {
  rpc SendMail(NotificationData) returns (SendEventInfo);
}

message SendEventInfo {
  int32 status = 1;
  string message = 2;
}

message NotificationData {
  ConnectionInfo connectionInfo = 1;
  repeated string receiver = 2;
  string content = 3;
  optional string subject = 4;
}

message ConnectionInfo {
  string protocol = 1;
  optional string address = 2;
  optional int32 port = 3;
  string login = 4;
  string password = 5;
}